--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -1,10 +1,11 @@
 with-expecter: true
-dir: "internal/mocks"
-filename: "{{.InterfaceName}}.go"
-mockname: "Mock{{.InterfaceName}}"
-outpkg: "mocks"
 packages:
   flight-booking/internal/interfaces:
+    config:
+      dir: "internal/mocks"
+      filename: "{{.InterfaceName}}.go"
+      mockname: "Mock{{.InterfaceName}}"
+      outpkg: "mocks"
     interfaces:
       RouteProvider:
       CacheService:
