--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,14 @@
 run:
   timeout: 5m
   go: "1.24"
+  tests: false
 
 linters:
   enable-all: true
+  disable:
+    - varnamelen
+    - mnd
+    - ireturn
+    - depguard
+    - exhaustruct
+    - err113
