--- a/.github/workflows/flight-booking.yml
+++ b/.github/workflows/flight-booking.yml
@@ -34,15 +34,22 @@ jobs:
     steps:
       - name: Check out the repo 🛎️
         uses: actions/checkout@v4
-      - name: Log in to Docker Hub 🔑
-        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+
+      - name: Configure AWS credentials 🔑
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          username: yurashni
-          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Login to Amazon ECR 🔐
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
       - name: Build and push Docker image 🏗️
         id: push
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           context: .
           push: true
-          tags: "yurashni/flight-booking:${{ github.ref_name }}"
+          tags: "746669229448.dkr.ecr.eu-central-1.amazonaws.com/flight-booking:${{ github.ref_name }}"
