--- a/.github/workflows/flight-booking.yml
+++ b/.github/workflows/flight-booking.yml
@@ -15,19 +15,19 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.24'
-      - name: Build
+      - name: Build the Go application 🏗️
         run: CGO_ENABLED=0 GOOS=linux go build -o flight-booking .
   docker-build:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v4
-      - name: Build the Docker image
+      - name: Build the Docker image 🐳
         run: docker build -t flight-booking .
 
   docker-push:
     if: github.event_name == 'release'
-    name: Push Docker image to Docker Hub 🚀
+    name: Push Docker image to Amazon ECR 🚀
     runs-on: ubuntu-latest
     needs:
       - docker-build
