add health check

--- a/.github/workflows/flight-booking.yml
+++ b/.github/workflows/flight-booking.yml
@@ -53,3 +53,19 @@ jobs:
           context: .
           push: true
           tags: "746669229448.dkr.ecr.eu-central-1.amazonaws.com/flight-booking:${{ github.ref_name }}"
+
+      - name: Render new ECS task definition
+        id: render-task
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: ecs-task-definition.json
+          container-name: flight-booking
+          image: "746669229448.dkr.ecr.eu-central-1.amazonaws.com/flight-booking:${{ github.ref_name }}"
+
+      - name: Deploy new task definition to ECS service
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.render-task.outputs.task-definition }}
+          service: flight-booking-service-ghr673we
+          cluster: flight-booking
+          wait-for-service-stability: true
