--- a/.github/workflows/flight-booking.yml
+++ b/.github/workflows/flight-booking.yml
@@ -26,6 +26,7 @@ jobs:
         run: docker build -t flight-booking .
 
   docker-push:
+    if: github.event_name == 'release'
     name: Push Docker image to Amazon ECR 🚀
     runs-on: ubuntu-latest
     needs:
