--- a/.github/workflows/flight-booking.yml
+++ b/.github/workflows/flight-booking.yml
@@ -11,11 +11,43 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
           go-version: '1.24'
-      - name: Build the Go application 🏗️
+
+      - name: Install Task
+        uses: arduino/setup-task@v1
+
+      - name: Run linter 🔍
+        run: task lint
+
+      - name: Check if generate or tidy changed files 🪄
+        run: |
+          git status --porcelain
+          git diff
+          git update-index -q --refresh
+  
+          # Save initial repo state
+          INITIAL=$(git status --porcelain)
+  
+          task generate
+          go mod tidy
+  
+          # Check if repo became dirty
+          FINAL=$(git status --porcelain)
+  
+          if [ "$INITIAL" != "$FINAL" ]; then
+            echo "❌ Task generate or go mod tidy caused changes:"
+            git diff
+            exit 1
+          fi
+
+      - name: Run tests 🧪
+        run: go test ./... -v
+
+      - name: Build binary 🏗️
         run: CGO_ENABLED=0 GOOS=linux go build -o flight-booking .
   docker-build:
     runs-on: ubuntu-latest
